--- a/manual/amixer.html
+++ b/manual/amixer.html
@@ -83,7 +83,7 @@
     <dd>
       <span id="index-amixer-1"></span>
       <div class="format">
-        <pre class="format">Manipulate ALSA settings.
+        <pre class="format">ALSA settings.
 Interactive prefix arg refreshes cache.
 
 (fn &amp;optional REFRESH)
@@ -98,7 +98,7 @@ Interactive prefix arg refreshes cache.
     <dd>
       <span id="index-amixer_002dstore-1"></span>
       <div class="format">
-        <pre class="format">Persist current amixer settings.
+        <pre class="format">Persist  amixer.
 </pre>
       </div>
     </dd>
