--- a/manual/emacspeak_002damark.html
+++ b/manual/emacspeak_002damark.html
@@ -115,7 +115,7 @@ given name, it is updated with path and position.
       <span id="index-emacspeak_002damark_002dsave-1"></span>
       <div class="format">
         <pre class=
-        "format">Save buffer-local AMarks in  directory of currently playing resource.
+        "format">Save buffer-local AMarks in  currently playing directory.
 </pre>
       </div>
     </dd>
