--- a/manual/emacspeak_002dbookshare.html
+++ b/manual/emacspeak_002dbookshare.html
@@ -388,7 +388,7 @@ Target location is generated from author and title.
     <dd>
       <span id="index-emacspeak_002dbookshare_002deww-1"></span>
       <div class="format">
-        <pre class="format">Render complete book using EWW
+        <pre class="format">Render  book using EWW
 
 (fn DIRECTORY)
 </pre>
