--- a/manual/emacspeak_002depub.html
+++ b/manual/emacspeak_002depub.html
@@ -136,8 +136,7 @@ during initialization.
       <div class="format">
         <pre class="format">EPub  Interaction.
 When opened, displays a bookshelf consisting of  epubs found at the
-root directory.
-For detailed documentation, see M-x emacspeak-epub-mode
+root directory,see M-x emacspeak-epub-mode
 </pre>
       </div>
     </dd>
