--- a/manual/emacspeak_002deww.html
+++ b/manual/emacspeak_002deww.html
@@ -815,9 +815,8 @@ The ul is automatically spoken if there is no user activity.
       "index-emacspeak_002deww_002dopen_002dmark-1"></span>
       <div class="format">
         <pre class=
-        "format">Open specified EWW marked location. If the content is already being
-displayed in this Emacs session, jump to it directly. With optional
-interactive prefix arg ‘delete’, delete that mark instead.
+        "format">Open EWW marked location.  With optional interactive prefix
+arg ‘delete’, delete that mark instead.
 
 (fn NAME &amp;optional DELETE)
 </pre>
