--- a/manual/emacspeak_002dextras.html
+++ b/manual/emacspeak_002dextras.html
@@ -106,17 +106,9 @@ annotation is inserted into the working buffer when complete.
       </dl><span id=
       "index-emacspeak_002dclipboard_002dcopy-1"></span>
       <div class="format">
-        <pre class=
-        "format">Copy contents of the region to the emacspeak clipboard. Previous
-contents of the clipboard will be overwritten. The Emacspeak clipboard
-is a convenient way of sharing information between independent
-Emacspeak sessions running on the same or different machines. Do not
-use this for sharing information within an Emacs session –Emacs’
-register commands are far more efficient and light-weight. Optional
-interactive prefix arg results in Emacspeak prompting for the
-clipboard file to use. Argument START and END specifies
-region. Optional argument PROMPT specifies whether we prompt for the
-name of a clipboard file.
+        <pre class="format">Use file-based Emacspeak Clipboard —
+dis a convenient way of sharing information between independent
+Emacspeak sessions running on  different machines. 
 </pre>
       </div>
     </dd>
@@ -137,13 +129,7 @@ name of a clipboard file.
       "index-emacspeak_002dclipboard_002dpaste-1"></span>
       <div class="format">
         <pre class=
-        "format">Yank contents of the Emacspeak clipboard at point.
-The Emacspeak clipboard is a convenient way of sharing information between
-independent Emacspeak sessions running on the same or different
-machines.  Do not use this for sharing information within an Emacs
-session –Emacs’ register commands are far more efficient and
-light-weight.  Optional interactive prefix arg pastes from
-the emacspeak table clipboard instead.
+        "format">Yank contents of the Emacspeak clipboard at point. 
 </pre>
       </div>
     </dd>
