--- a/manual/emacspeak_002dfiltertext.html
+++ b/manual/emacspeak_002dfiltertext.html
@@ -86,8 +86,7 @@
       </dl><span id="index-emacspeak_002dfiltertext-1"></span>
       <div class="format">
         <pre class=
-        "format">Copy over text in region to special filtertext buffer in
-preparation for interactively filtering text. 
+        "format">Copy over text in region to special filtertext buffer to  filter text. 
 
 (fn START END)
 </pre>
