--- a/manual/emacspeak_002dgoogle.html
+++ b/manual/emacspeak_002dgoogle.html
@@ -826,7 +826,7 @@ Optional interactive prefix arg ‘limit’ prompts for number of results, defau
     <dd>
       <span id="index-emacspeak_002dgoogle_002dtts-1"></span>
       <div class="format">
-        <pre class="format">Speak text using Google Network TTS.
+        <pre class="format">Google Network TTS.
 Optional interactive prefix arg ‘lang’ specifies  language identifier.
 
 (fn TEXT &amp;optional LANG)
