--- a/manual/emacspeak_002dmaths.html
+++ b/manual/emacspeak_002dmaths.html
@@ -116,8 +116,8 @@
       <span id="index-emacspeak_002dmaths_002denter-1"></span>
       <div class="format">
         <pre class=
-        "format">Send a LaTeX expression to Maths server.
-Tries to guess default based on context. 
+        "format">Send a LaTeX expression to Maths server,
+ guess  based on context. 
 </pre>
       </div>
     </dd>
@@ -132,8 +132,7 @@ Tries to guess default based on context.
       "index-emacspeak_002dmaths_002denter_002dguess-1"></span>
       <div class="format">
         <pre class=
-        "format">Send the guessed  LaTeX expression to Maths server.
-Guess is based on context.
+        "format">Send the guessed  LaTeX expression to Maths server. 
 </pre>
       </div>
     </dd>
