--- a/manual/dectalk_002dvoices.html
+++ b/manual/dectalk_002dvoices.html
@@ -79,7 +79,7 @@
         <dd><span id="index-_003cfn_003e-d-C_002dd"></span></dd>
       </dl><span id="index-dectalk-1"></span>
       <div class="format">
-        <pre class="format">Select Dectalk TTS.
+        <pre class="format">Dectalk TTS.
 </pre>
       </div>
     </dd>
