--- a/manual/emacspeak_002dfeeds.html
+++ b/manual/emacspeak_002dfeeds.html
@@ -143,7 +143,7 @@ Archiving is useful when synchronizing feeds across multiple machines.
       </dl><span id=
       "index-emacspeak_002dfeeds_002dbrowse-1"></span>
       <div class="format">
-        <pre class="format">Browse specified  feed.
+        <pre class="format">Browse   feed.
 
 (fn FEED)
 </pre>
