--- a/manual/emacspeak_002dm_002dplayer.html
+++ b/manual/emacspeak_002dm_002dplayer.html
@@ -101,7 +101,6 @@
         "format">Play specified resource using m-player.  Optional prefix argument
 play-list interprets resource as a play-list.  Second interactive
 prefix arg adds option -allow-dangerous-playlist-parsing to mplayer.
-Resource is a media resource or playlist containing media resources.
 The player is placed in a buffer in emacspeak-m-player-mode.
 
 (fn RESOURCE &amp;optional PLAY-LIST)
@@ -846,12 +845,9 @@ Interactive prefix arg appends the new resource to what is playing.
       <div class="format">
         <pre class=
         "format">Locate media matching specified pattern.  The results can be
-played as a play-list by pressing [RET] on the first line.
-Pattern is first converted to a regexp that accepts common
-punctuation separators (-,._’") in place of white-space.
-Results are placed in a Locate buffer and can be played using
-M-Player — use M-x emacspeak-dired-open-this-file locally bound to C-RET 
-to play individual tracks.
+played as a play-list by pressing [RET] on the first line, see
+ M-x emacspeak-dired-open-this-file locally bound to C-RET 
+to play  tracks.
 
 (fn PATTERN)
 </pre>
@@ -1333,7 +1329,7 @@ Time offset can be specified as a number of seconds, or as HH:MM:SS.
       </dl><span id=
       "index-emacspeak_002dm_002dplayer_002dshuffle-1"></span>
       <div class="format">
-        <pre class="format">Launch M-Player with shuffle turned on.
+        <pre class="format">M-Player with shuffle turned on.
 </pre>
       </div>
     </dd>
@@ -1407,8 +1403,7 @@ Interactive prefix arg toggles automatic cueing of ICY info updates.
       </dl><span id=
       "index-emacspeak_002dm_002dplayer_002durl-1"></span>
       <div class="format">
-        <pre class=
-        "format">Call emacspeak-m-player with specified URL.
+        <pre class="format">Call emacspeak-m-player with  URL.
 
 (fn URL &amp;optional PLAYLIST-P)
 </pre>
@@ -1454,10 +1449,7 @@ This will work if the soundcard is set to 48000.
       "index-emacspeak_002dm_002dplayer_002dusing_002dopenal-1"></span>
       <div class="format">
         <pre class=
-        "format">Use openal as the audio output driver. Adding hrtf=true to
-~/.alsoftrc gives HRTF. You need to have openal installed and have an
-mplayer that has been compiled with openal support to use this
-feature. Calling spec is like ‘emacspeak-m-player’.
+        "format">Use openal as the audio output driver.  
 
 (fn RESOURCE &amp;optional PLAY-LIST)
 </pre>
@@ -1566,9 +1558,9 @@ feature. Calling spec is like ‘emacspeak-m-player’.
       "index-emacspeak_002dm_002dplayer_002dyoutube_002dplayer-1"></span>
       <div class="format">
         <pre class=
-        "format">Use youtube-dl and mplayer to stream the audio for YouTube content.
-Default is to pick smallest (lowest quality) audio format.
-Optional prefix arg ‘best’ chooses highest quality.
+        "format">Use youtube-dl and mplayer to stream  audio from Youtube.
+Default picks lowest quality —
+Optional prefix arg ‘best’ chooses highest.
 
 (fn URL &amp;optional BEST)
 </pre>
@@ -1699,8 +1691,7 @@ M-l             emacspeak-m-player-load-playlist
     <dt id="index-User-Option-457">Variable: <strong>User
     Option</strong> <em>emacspeak-media-location-bindings</em></dt>
     <dd>
-      <p>Map specific key sequences to launching MPlayer
-      accelerators on a specific directory.</p>
+      <p>Map keys to launch MPlayer on a given directory.</p>
     </dd>
   </dl>
   <hr />
