--- a/manual/emacspeak_002dhide.html
+++ b/manual/emacspeak_002dhide.html
@@ -87,7 +87,7 @@
       "index-emacspeak_002dhide_002dor_002dexpose_002dall_002dblocks-1">
       </span>
       <div class="format">
-        <pre class="format">Hide or expose all blocks in buffer.
+        <pre class="format">Hide or expose all blocks.
 </pre>
       </div>
     </dd>
@@ -109,11 +109,8 @@
       "index-emacspeak_002dhide_002dor_002dexpose_002dblock-1"></span>
       <div class="format">
         <pre class="format">Hide or expose a block of text.
-This command either hides or exposes a block of text
-starting on the current line.  A block of text is defined as
-a portion of the buffer in which all lines start with a
-common PREFIX.  Optional interactive prefix arg causes all
-blocks in current buffer to be hidden or exposed.
+ Optional interactive prefix arg causes all blocks in current
+buffer to be hidden or exposed.
 
 (fn &amp;optional PREFIX)
 </pre>
@@ -138,11 +135,7 @@ blocks in current buffer to be hidden or exposed.
       "index-emacspeak_002dhide_002dspeak_002dblock_002dsans_002dprefix-1"></span>
       <div class="format">
         <pre class=
-        "format">Speaks current block after stripping its prefix.
-If the current block is not hidden, it first hides it.
-This is useful because as you locate blocks, you can invoke this
-command to listen to the block,
-and when you have heard enough navigate easily  to move past the block.
+        "format">Speaks current block after stripping its prefix. 
 </pre>
       </div>
     </dd>
