--- a/manual/emacspeak_002dsounds.html
+++ b/manual/emacspeak_002dsounds.html
@@ -149,7 +149,7 @@ Optional interactive PREFIX arg toggles global value.
     <dt id="index-User-Option-734">Variable: <strong>User
     Option</strong> <em>emacspeak-play-program</em></dt>
     <dd>
-      <p>Executable that plays sound files.</p>
+      <p>Play program.</p>
     </dd>
   </dl>
   <dl>
