--- a/manual/ladspa.html
+++ b/manual/ladspa.html
@@ -77,7 +77,7 @@
     <dd>
       <span id="index-ladspa-1"></span>
       <div class="format">
-        <pre class="format">Launch Ladspa workbench.
+        <pre class="format">Ladspa workbench.
 
 (fn &amp;optional REFRESH)
 </pre>
