--- a/manual/soundscape.html
+++ b/manual/soundscape.html
@@ -120,7 +120,7 @@
       <div class="format">
         <pre class="format">Start  a Soundscape listener.
 Listener is loaded with all Soundscapes defined in ‘soundscape-default-theme’ .
-Optional interactive prefix arg restarts the listener if already running.
+Optional interactive prefix arg restarts the listener.
 
 (fn &amp;optional RESTART)
 </pre>
@@ -222,7 +222,6 @@ This is then saved to soundscape-device for future use.
       </dl><span id="index-soundscape_002dtoggle-1"></span>
       <div class="format">
         <pre class="format">Toggle automatic SoundScapes.
-When turned on, Soundscapes are automatically run based on current major mode.
 Run command M-x soundscape-theme to see the default mode-&gt;mood mapping.
 </pre>
       </div>
