--- a/manual/sox.html
+++ b/manual/sox.html
@@ -170,7 +170,7 @@ Open specified snd-file on the Audio Workbench.
     <dd>
       <span id="index-sox_002dplay-1"></span>
       <div class="format">
-        <pre class="format">Play sound from current context.
+        <pre class="format">Play sound .
 </pre>
       </div>
     </dd>
