--- a/manual/xbacklight.html
+++ b/manual/xbacklight.html
@@ -79,7 +79,7 @@
     <dd>
       <span id="index-xbacklight_002dblack-1"></span>
       <div class="format">
-        <pre class="format">Turn screen black.
+        <pre class="format">Black screen.
 </pre>
       </div>
     </dd>
@@ -91,7 +91,7 @@
     <dd>
       <span id="index-xbacklight_002ddecrement-1"></span>
       <div class="format">
-        <pre class="format">Decrease brightness by  by one step.
+        <pre class="format">Decrease brightness.
 </pre>
       </div>
     </dd>
@@ -115,7 +115,7 @@
     <dd>
       <span id="index-xbacklight_002dincrement-1"></span>
       <div class="format">
-        <pre class="format">Increase brightness by  by one step.
+        <pre class="format">Increase brightness.
 </pre>
       </div>
     </dd>
@@ -127,7 +127,7 @@
     <dd>
       <span id="index-xbacklight_002dset-1"></span>
       <div class="format">
-        <pre class="format">Set brightness, a percentage value.
+        <pre class="format">Set brightness.
 
 (fn BRIGHTNESS)
 </pre>
@@ -141,7 +141,7 @@
     <dd>
       <span id="index-xbacklight_002dwhite-1"></span>
       <div class="format">
-        <pre class="format">Turn screen white.
+        <pre class="format">White screen.
 </pre>
       </div>
     </dd>
