--- a/manual/emacspeak_002dkeymap.html
+++ b/manual/emacspeak_002dkeymap.html
@@ -74,87 +74,43 @@
     <dt id="index-User-Option-438">Variable: <strong>User
     Option</strong> <em>emacspeak-alt-keys</em></dt>
     <dd>
-      <p>Alt key bindings. These bindings are available on prefix
-      key ‘alt’ (not to be confused with alt==meta) for example,
-      binding ‘s’ to emacspeak-emergency-tts-restart makes it
-      available on key ‘ALT s’ KEYS is a string in the format used
-      by ‘kbd’. Command is an interactive command or a
-      prefix-command.</p>
+      <p>Alt key bindings.</p>
     </dd>
   </dl>
   <dl>
     <dt id="index-User-Option-439">Variable: <strong>User
     Option</strong> <em>emacspeak-ctl-z-keys</em></dt>
     <dd>
-      <p>Bindings specified here are available on prefix key ‘C-z’
-      for example, binding ‘z’ to ‘suspend-frame’ makes it
-      available on ‘C-z z’. KEYS should be a string in the format
-      used by ‘kbd’. Command is an interactive command or a
-      prefix-command.</p>
+      <p>CTL-z keymap.</p>
     </dd>
   </dl>
   <dl>
     <dt id="index-User-Option-440">Variable: <strong>User
     Option</strong> <em>emacspeak-hyper-keys</em></dt>
     <dd>
-      <p>Hyper-Key bindings. Bindings specified here are available
-      on prefix key ‘hyper’ for example, binding ‘b’ to command
-      ‘bbdb ’ makes it available on key ‘hyper b’. KEYS should be a
-      string in the format used by ‘kbd’. Command is an interactive
-      command or a prefix-command .</p>
+      <p>Hyper-Key bindings.</p>
     </dd>
   </dl>
   <dl>
     <dt id="index-User-Option-441">Variable: <strong>User
     Option</strong> <em>emacspeak-personal-ctlx-keys</em></dt>
     <dd>
-      <p>Key bindings for use with C-e C-x. Bindings specified here
-      are available on prefix key C-e C-x, for example, binding
-      ‘C-s’ to emacspeak-emergency-tts-restart makes it available
-      on key C-e C-x C-s. KEYS should be a string in the format
-      used by ‘kbd’. Command is an interactive command or a
-      prefix-command .</p>
+      <p>Key bindings for use with C-e C-x.</p>
     </dd>
   </dl>
   <dl>
     <dt id="index-User-Option-442">Variable: <strong>User
     Option</strong> <em>emacspeak-personal-keys</em></dt>
     <dd>
-      <p>Key bindings for C-e x. For example, binding ‘s’ to
-      emacspeak-emergency-tts-restart makes it available on C-e x
-      s. KEYS should be a string in the format used by ‘kbd’.
-      Command is an interactive command or a prefix-command .</p>
+      <p>Key bindings for C-e x.</p>
     </dd>
   </dl>
   <dl>
     <dt id="index-User-Option-443">Variable: <strong>User
     Option</strong> <em>emacspeak-super-keys</em></dt>
     <dd>
-      <p>Specifies super key bindings for the audio desktop. You
-      can Bindings specified here are available on prefix key
-      ‘super’ for example, if you bind ‘s’ to command
-      emacspeak-emergency-tts-restart then that command will be
-      available on key ‘super s’. KEYS should be a string constant
-      in the format used for saving keyboard macros (see
-      ‘edmacro-mode’).</p>
-      <p>Command is an interactive command or a prefix-command that
-      can be bound to a key.</p>
-      <p>The value of this variable is an association list. The car
-      of each element specifies a key sequence. The cdr specifies
-      an interactive command that the key sequence executes.</p>
+      <p>Super key bindings.</p>
     </dd>
   </dl>
-  <hr />
-  <div class="header">
-    <p>Next: <a href="emacspeak_002dkmacro.html" accesskey="n" rel=
-    "next">emacspeak-kmacro</a>, Previous: <a href=
-    "emacspeak_002djs2.html" accesskey="p" rel=
-    "prev">emacspeak-js2</a>, Up: <a href=
-    "Emacspeak-Commands-And-Options.html" accesskey="u" rel=
-    "up">Emacspeak Commands And Options</a> &nbsp; [<a href=
-    "index.html#SEC_Contents" title="Table of contents" rel=
-    "contents">Contents</a>][<a href="Concept-Index.html" title=
-    "Index" rel="index">Index</a>]</p>
-  </div>
 </body>
 </html>
