--- a/manual/espeak_002dvoices.html
+++ b/manual/espeak_002dvoices.html
@@ -82,7 +82,7 @@
         <dd><span id="index-_003cfn_003e-d-C_002de"></span></dd>
       </dl><span id="index-espeak-1"></span>
       <div class="format">
-        <pre class="format">Start ESpeak engine.
+        <pre class="format">Start ESpeak.
 </pre>
       </div>
     </dd>
