--- a/manual/emacspeak_002dm_002dplayer.html
+++ b/manual/emacspeak_002dm_002dplayer.html
@@ -100,8 +100,7 @@
         <pre class=
         "format">Play  resource.  Optional prefix argument
 play-list interprets resource as a play-list.  Second interactive
-prefix arg adds option -allow-dangerous-playlist-parsing to mplayer.
-The player is placed in a buffer in emacspeak-m-player-mode.
+prefix arg adds option -allow-dangerous-playlist-parsing to mplayer. 
 
 (fn RESOURCE &amp;optional PLAY-LIST)
 </pre>
@@ -118,7 +117,7 @@ The player is placed in a buffer in emacspeak-m-player-mode.
       <span id=
       "index-emacspeak_002dm_002dplayer_002dadd_002dautopan-1"></span>
       <div class="format">
-        <pre class="format">Add predefined autopan effect.
+        <pre class="format">Add autopan effect.
 </pre>
       </div>
     </dd>
@@ -134,7 +133,7 @@ The player is placed in a buffer in emacspeak-m-player-mode.
       "index-emacspeak_002dm_002dplayer_002dadd_002dautosat-1"></span>
       <div class="format">
         <pre class=
-        "format">Add predefined ZamAutoSat (auto saturation) effect.
+        "format">Add ZamAutoSat (auto saturation) effect.
 </pre>
       </div>
     </dd>
@@ -152,7 +151,7 @@ The player is placed in a buffer in emacspeak-m-player-mode.
       "index-emacspeak_002dm_002dplayer_002dadd_002dequalizer-1"></span>
       <div class="format">
         <pre class=
-        "format">Add equalizer to playing stream.  Equalizer is updated as each change
+        "format">Add equalizer.  Equalizer is updated as each change
 is made, and the final effect set by pressing RET.  Interactive prefix
 arg ‘reset’ starts with all filters set to 0.
 
@@ -172,10 +171,8 @@ arg ‘reset’ starts with all filters set to 0.
       <span id=
       "index-emacspeak_002dm_002dplayer_002dadd_002dfilter-1"></span>
       <div class="format">
-        <pre class=
-        "format">Adds specified filter. Prompts with one of several pre-defined
-filters. Optional interactive prefix arg ‘edit’ enables editing the
-selected filter before it is applied.
+        <pre class="format">Adds  filter with completion.
+ Optional interactive prefix arg ‘edit’ edits the.
 
 (fn FILTER-NAME &amp;optional EDIT)
 </pre>
@@ -230,8 +227,7 @@ our pre-defined filters if appropriate.
       <span id=
       "index-emacspeak_002dm_002dplayer_002damark_002dadd-1"></span>
       <div class="format">
-        <pre class=
-        "format">Set AMark ‘name’ at current position in current audio stream.
+        <pre class="format">Set AMark ‘name’ at current position.
 Interactive prefix arg prompts for position.
 As the default, use current position.
 
@@ -250,7 +246,7 @@ As the default, use current position.
       <span id=
       "index-emacspeak_002dm_002dplayer_002damark_002djump-1"></span>
       <div class="format">
-        <pre class="format">Jump to specified AMark.
+        <pre class="format">Jump to AMark.
 </pre>
       </div>
     </dd>
@@ -265,8 +261,7 @@ As the default, use current position.
       <span id=
       "index-emacspeak_002dm_002dplayer_002damark_002dsave-1"></span>
       <div class="format">
-        <pre class=
-        "format">Ensure that amarks are saved in the directory of the resource .
+        <pre class="format">Save amarks.
 </pre>
       </div>
     </dd>
@@ -285,8 +280,7 @@ As the default, use current position.
       "index-emacspeak_002dm_002dplayer_002dapply_002dreverb_002dpreset-1">
       </span>
       <div class="format">
-        <pre class=
-        "format">Prompt for a predefined reverb preset and apply it.
+        <pre class="format">Prompt for and apply a reverb preset.
 You need to use mplayer built with ladspa support, and have package
 tap-reverb already installed.
 
@@ -307,7 +301,7 @@ tap-reverb already installed.
       <span id=
       "index-emacspeak_002dm_002dplayer_002dbackward_002d10min-1"></span>
       <div class="format">
-        <pre class="format">Move backward by ten minutes.
+        <pre class="format">Move backward ten minutes.
 </pre>
       </div>
     </dd>
@@ -322,7 +316,7 @@ tap-reverb already installed.
       <span id=
       "index-emacspeak_002dm_002dplayer_002dbackward_002d10s-1"></span>
       <div class="format">
-        <pre class="format">Move back by 10 seconds.
+        <pre class="format">Move back 10 seconds.
 </pre>
       </div>
     </dd>
@@ -338,7 +332,7 @@ tap-reverb already installed.
       <span id=
       "index-emacspeak_002dm_002dplayer_002dbackward_002d1min-1"></span>
       <div class="format">
-        <pre class="format">Move back by 1 minute.
+        <pre class="format">Move back 1 minute.
 </pre>
       </div>
     </dd>
@@ -370,7 +364,7 @@ tap-reverb already installed.
       "index-emacspeak_002dm_002dplayer_002dbeginning_002dof_002dtrack-1">
       </span>
       <div class="format">
-        <pre class="format">Move to beginning of track.
+        <pre class="format">Move to beginning.
 </pre>
       </div>
     </dd>
@@ -407,7 +401,7 @@ tap-reverb already installed.
       <span id=
       "index-emacspeak_002dm_002dplayer_002dclear_002dfilters-1"></span>
       <div class="format">
-        <pre class="format">Clear all active filters
+        <pre class="format">Clear all filters
 </pre>
       </div>
     </dd>
@@ -441,8 +435,7 @@ tap-reverb already installed.
       "index-emacspeak_002dm_002dplayer_002dcustomize_002doptions-1">
       </span>
       <div class="format">
-        <pre class=
-        "format">Use Customize to manipulate MPlayer options.
+        <pre class="format">Use Customize to set MPlayer options.
 </pre>
       </div>
     </dd>
@@ -531,8 +524,7 @@ tap-reverb already installed.
       "index-emacspeak_002dm_002dplayer_002ddisplay_002dposition-1">
       </span>
       <div class="format">
-        <pre class=
-        "format">Display current position in track and its length.
+        <pre class="format">Display current position in track.
 </pre>
       </div>
     </dd>
@@ -562,8 +554,7 @@ tap-reverb already installed.
       <span id=
       "index-emacspeak_002dm_002dplayer_002dedit_002dreverb-1"></span>
       <div class="format">
-        <pre class="format">Edit  current ladspa reverb filter.
-See option emacspeak-m-player-reverb-filter to customize reverb filter values.
+        <pre class="format">Edit ladspa reverb filter.
 You need to use mplayer built with ladspa support, and have package
 tap-reverb already installed.
 </pre>
@@ -582,7 +573,7 @@ tap-reverb already installed.
       "index-emacspeak_002dm_002dplayer_002dend_002dof_002dtrack-1">
       </span>
       <div class="format">
-        <pre class="format">Move to beginning of track.
+        <pre class="format">Move to end.
 </pre>
       </div>
     </dd>
@@ -601,7 +592,7 @@ tap-reverb already installed.
       </span>
       <div class="format">
         <pre class=
-        "format">Manipulate values in specified vector using minibuffer.
+        "format">Manipulate values in  vector using minibuffer.
 Applies  the resulting value at each step.
 
 (fn V)
@@ -623,7 +614,7 @@ Applies  the resulting value at each step.
       </span>
       <div class="format">
         <pre class=
-        "format">Prompts for  equalizer preset and applies it to current stream.
+        "format">Prompts for  and apply equalizer preset.
 
 The following presets are available:
 
@@ -645,8 +636,7 @@ flat classical club dance full-bass full-bass-and-treble
       <span id=
       "index-emacspeak_002dm_002dplayer_002dfaster-1"></span>
       <div class="format">
-        <pre class="format">Speed up  playback.
-This affects pitch.
+        <pre class="format">Speed up  playback. 
 </pre>
       </div>
     </dd>
@@ -662,7 +652,7 @@ This affects pitch.
       <span id=
       "index-emacspeak_002dm_002dplayer_002dforward_002d10min-1"></span>
       <div class="format">
-        <pre class="format">Move forward by ten minutes.
+        <pre class="format">Move forward ten minutes.
 </pre>
       </div>
     </dd>
@@ -677,7 +667,7 @@ This affects pitch.
       <span id=
       "index-emacspeak_002dm_002dplayer_002dforward_002d10s-1"></span>
       <div class="format">
-        <pre class="format">Move forward by 10 seconds.
+        <pre class="format">Move forward 10 seconds.
 </pre>
       </div>
     </dd>
@@ -716,8 +706,8 @@ This affects pitch.
       </dl><span id=
       "index-emacspeak_002dm_002dplayer_002dfrom_002dmedia_002dhistory-1"></span>
       <div class="format">
-        <pre class="format">Play media from media-history.
-Numeric arg ‘posn’ specifies position in history.
+        <pre class=
+        "format">Play media from position ‘posn’media-history. 
 
 (fn POSN)
 </pre>
@@ -734,7 +724,7 @@ Numeric arg ‘posn’ specifies position in history.
       <span id=
       "index-emacspeak_002dm_002dplayer_002dget_002dlength-1"></span>
       <div class="format">
-        <pre class="format">Display length of track in seconds.
+        <pre class="format">Display length of track.
 </pre>
       </div>
     </dd>
@@ -764,7 +754,7 @@ Numeric arg ‘posn’ specifies position in history.
       <span id=
       "index-emacspeak_002dm_002dplayer_002dleft_002dchannel-1"></span>
       <div class="format">
-        <pre class="format">Play both channels on left channel.
+        <pre class="format">Play both channels on left.
 </pre>
       </div>
     </dd>
@@ -799,7 +789,7 @@ Interactive prefix arg appends the new resource to what is playing.
       <span id=
       "index-emacspeak_002dm_002dplayer_002dload_002dfile-1"></span>
       <div class="format">
-        <pre class="format">Load specified file.
+        <pre class="format">Load file.
 
 (fn F)
 </pre>
@@ -818,7 +808,7 @@ Interactive prefix arg appends the new resource to what is playing.
       <span id=
       "index-emacspeak_002dm_002dplayer_002dload_002dplaylist-1"></span>
       <div class="format">
-        <pre class="format">Load specified playlist file.
+        <pre class="format">Load playlist.
 
 (fn F)
 </pre>
@@ -844,7 +834,7 @@ Interactive prefix arg appends the new resource to what is playing.
       "index-emacspeak_002dm_002dplayer_002dlocate_002dmedia-1"></span>
       <div class="format">
         <pre class=
-        "format">Locate media matching specified pattern.  The results can be
+        "format">Locate media matching  pattern.  The results can be
 played as a play-list by pressing [RET] on the first line, see
  M-x emacspeak-dired-open-this-file locally bound to C-RET
 to play  tracks.
@@ -972,7 +962,7 @@ during initialization.
       <span id=
       "index-emacspeak_002dm_002dplayer_002dnext_002dtrack-1"></span>
       <div class="format">
-        <pre class="format">Move to next track.
+        <pre class="format">Next track.
 </pre>
       </div>
     </dd>
@@ -985,7 +975,7 @@ during initialization.
       <span id="index-emacspeak_002dm_002dplayer_002dpan-1"></span>
       <div class="format">
         <pre class=
-        "format">Pan from left to right   and back from right to left one step at a time.
+        "format">Pan from left to right   and back  one step at a time.
 </pre>
       </div>
     </dd>
@@ -999,7 +989,7 @@ during initialization.
       <span id=
       "index-emacspeak_002dm_002dplayer_002dpause-1"></span>
       <div class="format">
-        <pre class="format">Pause or unpause media player.
+        <pre class="format">Pause or unpause.
 </pre>
       </div>
     </dd>
@@ -1017,7 +1007,7 @@ during initialization.
       "index-emacspeak_002dm_002dplayer_002dpersist_002dprocess-1"></span>
       <div class="format">
         <pre class=
-        "format">Persists current m-player process instance by renaming its buffer.
+        "format">Persists  m-player process instance by renaming its buffer.
 Optional interactive prefix arg prompts for name to use for  player.
 
 (fn &amp;optional NAME)
@@ -1036,8 +1026,7 @@ Optional interactive prefix arg prompts for name to use for  player.
       <span id=
       "index-emacspeak_002dm_002dplayer_002dplay_002drss-1"></span>
       <div class="format">
-        <pre class=
-        "format">Play an RSS stream by converting to  an M3U playlist.
+        <pre class="format">Play an RSS stream.
 
 (fn RSS-URL)
 </pre>
@@ -1057,7 +1046,7 @@ Optional interactive prefix arg prompts for name to use for  player.
       "index-emacspeak_002dm_002dplayer_002dplay_002dtracks_002djump-1">
       </span>
       <div class="format">
-        <pre class="format">Move within the play tree.
+        <pre class="format">Skip tracks.
 
 (fn STEP)
 </pre>
@@ -1113,7 +1102,7 @@ Optional interactive prefix arg prompts for name to use for  player.
       <span id=
       "index-emacspeak_002dm_002dplayer_002dprevious_002dtrack-1"></span>
       <div class="format">
-        <pre class="format">Move to previous track.
+        <pre class="format">Previous track.
 </pre>
       </div>
     </dd>
@@ -1127,7 +1116,7 @@ Optional interactive prefix arg prompts for name to use for  player.
       <span id=
       "index-emacspeak_002dm_002dplayer_002dquit-1"></span>
       <div class="format">
-        <pre class="format">Quit media player.
+        <pre class="format">Quit.
 </pre>
       </div>
     </dd>
@@ -1143,8 +1132,7 @@ Optional interactive prefix arg prompts for name to use for  player.
       <span id=
       "index-emacspeak_002dm_002dplayer_002dreset_002doptions-1"></span>
       <div class="format">
-        <pre class=
-        "format">Reset MPlayer options to initial defaults.
+        <pre class="format">Reset MPlayer options.
 </pre>
       </div>
     </dd>
@@ -1159,7 +1147,7 @@ Optional interactive prefix arg prompts for name to use for  player.
       <span id=
       "index-emacspeak_002dm_002dplayer_002dreset_002dspeed-1"></span>
       <div class="format">
-        <pre class="format">Reset playing speed to normal.
+        <pre class="format">Reset  speed.
 </pre>
       </div>
     </dd>
@@ -1210,7 +1198,7 @@ Check first if current buffer is in emacspeak-m-player-mode.
       <span id=
       "index-emacspeak_002dm_002dplayer_002dscale_002dspeed-1"></span>
       <div class="format">
-        <pre class="format">Scale speed by specified factor.
+        <pre class="format">Scale speed by factor.
 
 (fn FACTOR)
 </pre>
@@ -1229,8 +1217,7 @@ Check first if current buffer is in emacspeak-m-player-mode.
       <span id=
       "index-emacspeak_002dm_002dplayer_002dseek_002dabsolute-1"></span>
       <div class="format">
-        <pre class=
-        "format">Seek  to absolute specified pos in seconds.
+        <pre class="format">Seek  to absolute pos in seconds.
 The time position can also be specified as HH:MM:SS.
 
 (fn POS)
@@ -1250,8 +1237,7 @@ The time position can also be specified as HH:MM:SS.
       <span id=
       "index-emacspeak_002dm_002dplayer_002dseek_002dpercentage-1"></span>
       <div class="format">
-        <pre class=
-        "format">Seek  to absolute specified pos in percent.
+        <pre class="format">Seek  to absolute pos in percent.
 
 (fn POS)
 </pre>
@@ -1270,8 +1256,7 @@ The time position can also be specified as HH:MM:SS.
       <span id=
       "index-emacspeak_002dm_002dplayer_002dseek_002drelative-1"></span>
       <div class="format">
-        <pre class=
-        "format">Seek  by offset into stream from current position.
+        <pre class="format">Seek  by offset from current position.
 Time offset can be specified as a number of seconds, or as HH:MM:SS.
 
 (fn OFFSET)
@@ -1345,8 +1330,7 @@ Time offset can be specified as a number of seconds, or as HH:MM:SS.
       <span id=
       "index-emacspeak_002dm_002dplayer_002dslave_002dcommand-1"></span>
       <div class="format">
-        <pre class=
-        "format">Dispatch slave command read from minibuffer.
+        <pre class="format">Dispatch slave command.
 
 (fn COMMAND)
 </pre>
@@ -1362,8 +1346,7 @@ Time offset can be specified as a number of seconds, or as HH:MM:SS.
       <span id=
       "index-emacspeak_002dm_002dplayer_002dslower-1"></span>
       <div class="format">
-        <pre class="format">Slow down playback.
-This affects pitch.
+        <pre class="format">Slow down playback. 
 </pre>
       </div>
     </dd>
@@ -1379,8 +1362,7 @@ This affects pitch.
       <span id=
       "index-emacspeak_002dm_002dplayer_002dstream_002dinfo-1"></span>
       <div class="format">
-        <pre class=
-        "format">Speak and display metadata if available.
+        <pre class="format">Speak and display metadata.
 Interactive prefix arg toggles automatic cueing of ICY info updates.
 
 (fn &amp;optional TOGGLE-CUE)
@@ -1447,7 +1429,7 @@ This will work if the soundcard is set to 48000.
       </dl><span id=
       "index-emacspeak_002dm_002dplayer_002dusing_002dopenal-1"></span>
       <div class="format">
-        <pre class="format">Use openal for audio output.  
+        <pre class="format">Use openal.  
 
 (fn RESOURCE &amp;optional PLAY-LIST)
 </pre>
@@ -1466,8 +1448,7 @@ This will work if the soundcard is set to 48000.
       <span id=
       "index-emacspeak_002dm_002dplayer_002dvolume_002dchange-1"></span>
       <div class="format">
-        <pre class=
-        "format">Change volume to specified absolute value.
+        <pre class="format">Set volume.
 
 (fn VALUE)
 </pre>
@@ -1484,7 +1465,7 @@ This will work if the soundcard is set to 48000.
       <span id=
       "index-emacspeak_002dm_002dplayer_002dvolume_002ddown-1"></span>
       <div class="format">
-        <pre class="format">Decrease volume.
+        <pre class="format">Volume down.
 </pre>
       </div>
     </dd>
@@ -1517,7 +1498,7 @@ This will work if the soundcard is set to 48000.
       <span id=
       "index-emacspeak_002dm_002dplayer_002dvolume_002dup-1"></span>
       <div class="format">
-        <pre class="format">Increase volume.
+        <pre class="format">Volume up.
 </pre>
       </div>
     </dd>
@@ -1671,20 +1652,6 @@ M-l             emacspeak-m-player-load-playlist
   </dl>
   <dl>
     <dt id="index-User-Option-455">Variable: <strong>User
-    Option</strong> <em>emacspeak-m-player-reverb-filter</em></dt>
-    <dd>
-      <p>Tap Reverb Settings.</p>
-    </dd>
-  </dl>
-  <dl>
-    <dt id="index-User-Option-456">Variable: <strong>User
-    Option</strong> <em>emacspeak-m-player-youtube-dl</em></dt>
-    <dd>
-      <p>YouTube download tool</p>
-    </dd>
-  </dl>
-  <dl>
-    <dt id="index-User-Option-457">Variable: <strong>User
     Option</strong> <em>emacspeak-media-location-bindings</em></dt>
     <dd>
       <p>Map keys to launch MPlayer on a directory.</p>
