--- a/manual/emacspeak_002dwizards.html
+++ b/manual/emacspeak_002dwizards.html
@@ -919,14 +919,12 @@ updating custom settings for a specific package or group of packages.
       </div>
     </dd>
   </dl><span id=
-  "emacspeak_002dwizards_002ddescribe_002dpersonality"></span>
+  "emacspeak_002dwizards_002ddescribe_002dvoice"></span>
   <h4 class="subsubsection">12.207.1.36
-  emacspeak-wizards-describe-personality</h4>
+  emacspeak-wizards-describe-voice</h4>
   <dl>
-    <dt id=
-    "index-emacspeak_002dwizards_002ddescribe_002dpersonality">
-    Command:
-    <strong>emacspeak-wizards-describe-personality</strong>
+    <dt id="index-emacspeak_002dwizards_002ddescribe_002dvoice">
+    Command: <strong>emacspeak-wizards-describe-voice</strong>
     <em>(personality)</em></dt>
     <dd>
       <dl compact="compact">
@@ -937,7 +935,7 @@ updating custom settings for a specific package or group of packages.
         <dt><kbd>&lt;help&gt; C-v</kbd></dt>
         <dd><span id="index-_003chelp_003e-C_002dv"></span></dd>
       </dl><span id=
-      "index-emacspeak_002dwizards_002ddescribe_002dpersonality-1"></span>
+      "index-emacspeak_002dwizards_002ddescribe_002dvoice-1"></span>
       <div class="format">
         <pre class="format">Describe  voice — analogous to C-h /.
 When called interactively, ‘personality’ defaults to first
