--- a/manual/emacspeak_002dextras.html
+++ b/manual/emacspeak_002dextras.html
@@ -333,21 +333,18 @@ Sample text to use comes from variable
 </pre>
       </div>
     </dd>
-  </dl><span id=
-  "emacspeak_002dwizards_002dshow_002dvoice_002dfonts"></span>
+  </dl><span id="emacspeak_002dwizards_002dshow_002dvoices"></span>
   <h4 class="subsubsection">12.73.1.15
-  emacspeak-wizards-show-voice-fonts</h4>
+  emacspeak-wizards-show-voices</h4>
   <dl>
-    <dt id=
-    "index-emacspeak_002dwizards_002dshow_002dvoice_002dfonts">
-    Command:
-    <strong>emacspeak-wizards-show-voice-fonts</strong></dt>
+    <dt id="index-emacspeak_002dwizards_002dshow_002dvoices">
+    Command: <strong>emacspeak-wizards-show-voices</strong></dt>
     <dd>
       <span id=
-      "index-emacspeak_002dwizards_002dshow_002dvoice_002dfonts-1"></span>
+      "index-emacspeak_002dwizards_002dshow_002dvoices-1"></span>
       <div class="format">
         <pre class=
-        "format">Display a buffer with sample text in the defined voice fonts.
+        "format">Display a buffer with sample text in the defined voices.
 </pre>
       </div>
     </dd>
