--- a/manual/index.html
+++ b/manual/index.html
@@ -53,8 +53,8 @@
   <h1 class="settitle c2">Emacspeak User’s Manual — 2nd
   Edition.</h1>
   <p>This manual documents <strong>Emacspeak, The Complete Audio
-  Desktop</strong> and was last updated on December 31,
-  2020.</p><span id="SEC_Overview"></span>
+  Desktop</strong> and was last updated on January 2,
+  2021.</p><span id="SEC_Overview"></span>
   <h2 class="shortcontents-heading">Short Table of Contents</h2>
   <div class="shortcontents">
     <ul class="no-bullet">
@@ -3880,13 +3880,12 @@
                   12.73.1.14
                   emacspeak-wizards-midi-using-m-score</a></li>
                   <li><a id=
-                  "toc-emacspeak_002dwizards_002dshow_002dvoice_002dfonts"
+                  "toc-emacspeak_002dwizards_002dshow_002dvoices"
                   href=
-                  "emacspeak_002dextras.html#emacspeak_002dwizards_002dshow_002dvoice_002dfonts"
+                  "emacspeak_002dextras.html#emacspeak_002dwizards_002dshow_002dvoices"
                   name=
-                  "toc-emacspeak_002dwizards_002dshow_002dvoice_002dfonts">
-                  12.73.1.15
-                  emacspeak-wizards-show-voice-fonts</a></li>
+                  "toc-emacspeak_002dwizards_002dshow_002dvoices">12.73.1.15
+                  emacspeak-wizards-show-voices</a></li>
                   <li><a id=
                   "toc-emacspeak_002dwizards_002dtramp_002dopen_002dlocation"
                   href=
