--- a/manual/index.html
+++ b/manual/index.html
@@ -10730,9 +10730,22 @@
             "voice_002ddefs.html#voice_002ddefs" name=
             "toc-voice_002ddefs-1">12.228 voice-defs</a>
             <ul class="no-bullet">
+              <li><a id="toc-An-Overview-Of-Voice-Design" href=
+              "voice_002ddefs.html#An-Overview-Of-Voice-Design"
+              name="toc-An-Overview-Of-Voice-Design">12.228.1 An
+              Overview Of Voice Design</a></li>
+              <li><a id=
+              "toc-Creating-Distinct-Voices-Via-Aural-CSS" href=
+              "voice_002ddefs.html#Creating-Distinct-Voices-Via-Aural-CSS"
+              name=
+              "toc-Creating-Distinct-Voices-Via-Aural-CSS">12.228.2
+              Creating Distinct Voices Via Aural CSS</a></li>
+              <li><a id="toc-Things-to-note" href=
+              "voice_002ddefs.html#Things-to-note" name=
+              "toc-Things-to-note">12.228.3 Things to note</a></li>
               <li><a id="toc-voice_002ddefs-Options" href=
               "voice_002ddefs.html#voice_002ddefs-Options" name=
-              "toc-voice_002ddefs-Options">12.228.1 voice-defs
+              "toc-voice_002ddefs-Options">12.228.4 voice-defs
               Options</a></li>
             </ul>
           </li>
