--- a/manual/voice_002ddefs.html
+++ b/manual/voice_002ddefs.html
@@ -67,9 +67,49 @@
   <span id="voice_002ddefs-1"></span>
   <h3 class="section">12.228 voice-defs</h3>
   <p>Contains just the voice definitions. Voices are defined using
-  the facilities of module voice-setup.</p><span id=
-  "voice_002ddefs-Options"></span>
-  <h4 class="subsection">12.228.1 voice-defs Options</h4>
+  the macro <code>defvoice</code> from module
+  voice-setup.</p><span id="An-Overview-Of-Voice-Design"></span>
+  <h4 class="subsection">12.228.1 An Overview Of Voice Design</h4>
+  <p>Aural CSS defines 4 primary device-independent dimensions.
+  Average-Pitch, Pitch-Range, Stress, and Richness. There are ten
+  possible values along each dimension (0..9), giving a total of
+  10,000 possible settings.</p>
+  <p>Engine-specific modules such as dectalk-voices and
+  outloud-voices map these dimensions to device-specific parameters
+  and are responsible for generating the final device-specific
+  codes.</p><span id=
+  "Creating-Distinct-Voices-Via-Aural-CSS"></span>
+  <h4 class="subsection">12.228.2 Creating Distinct Voices Via
+  Aural CSS</h4>
+  <p>Along each dimension, a setting of 5 is mapped to the default
+  setting for the voice as implemented by a given engine. Values on
+  either side of 5 produce opposing effects. This module defines
+  the following effects, which can be conceptualized as
+  opposites.</p>
+  <ol type="A" start="1">
+    <li>bolden , lighten</li>
+    <li>animate, monotone</li>
+    <li>brighten, smoothen</li>
+  </ol>
+  <p>In addition, we define <code>bold-and-animate</code> as an
+  auditory analog of <code>bold-italic</code>. The two additional
+  voices <code>indent</code> and <code>annotate</code> predate the
+  above and are retained as two <em>softer</em> voices. Finally,
+  there are 4 <em>overlay</em> voices, corresponding to the 4
+  dimensions; these each set one of the dimensions to
+  <code>8</code>. Thus, we have a total of 25 unique voices defined
+  in this module.</p><span id="Things-to-note"></span>
+  <h4 class="subsection">12.228.3 Things to note</h4>
+  <ul>
+    <li>These voices are designed to be distinctive when used in a
+    given utterance.</li>
+    <li>Non-goal — to be able to identify each distinct voice in
+    isolation.</li>
+    <li>Audio-formatting is designed to set apart different types
+    of content so that when used in context, one can easily
+    pick-out distinct parts of the utterance.</li>
+  </ul><span id="voice_002ddefs-Options"></span>
+  <h4 class="subsection">12.228.4 voice-defs Options</h4>
   <dl>
     <dt id="index-User-Option-123">Variable: <strong>User
     Option</strong> <em>voice-animate-extra-settings</em></dt>
